add_custom_target(utility)

add_library(random random.h random.c)
add_dependencies(utility random)

add_library(cli cli.h cli.c)
target_link_libraries(cli PUBLIC
  str_view::str_view
)
add_dependencies(utility cli)

add_library(std_allocator std_allocator.h std_allocator.c)
target_link_libraries(std_allocator ccc::ccc)
add_dependencies(utility std_allocator)

add_library(stack_allocator stack_allocator.h stack_allocator.c)
target_link_libraries(stack_allocator ccc::ccc)
add_dependencies(utility stack_allocator)

add_library(string_arena string_arena.h string_arena.c)
target_link_libraries(string_arena ccc::ccc)
add_dependencies(utility string_arena)

add_library(defer INTERFACE defer.h)
if (CMAKE_C_COMPILER_ID STREQUAL "Clang")
    include(CheckCCompilerFlag)
    check_c_compiler_flag(-fdefer-ts CCC_HAS_DEFER_TS)
    if (CCC_HAS_DEFER_TS)
        target_compile_options(defer INTERFACE -fdefer-ts)
    endif()
endif()
